@@ -1,97 +1,0 @@
-#
-# FPAC configuration file
-#
-# This file MUST be ${prefix}/etc/ax25/fpac.conf
-
-#
-# Informations on the node
-#
-
-L2call    = F1TVE-8
-L3call    = F1TVE-9
-Trcall    = F1TVE-10
-DNIC      = 2080
-Address   = 192502
-Coverage  = 192102 192402
-InetPort  = 10093
-InetAddr  = 44.151.75.1
-Password  = your_fpac_password_here
-City      = La Garennes Colombes
-State     = 75017
-Country   = France
-Locator   = JN18CV
-UserPort  = *
-DefPort   = 1
-
-#
-# Other commands
-#
-
-Command
-	MONitor = /usr/local/sbin/monitor -art -p%1
-	BBs     = /usr/local/sbin/call_tcp f5kck 1022
-#	CLuster = connect f6krq-3 2080931501
-	STat    = /bin/cat ${prefix}/var/ax25/fpac/fpacstat.dat ${prefix}/var/ax25/fpac/fpacstat.day
-	CONVers	= telnet %{2:f1tve.ampr.org} 3600 \"/n %u %{1:139}\"
-	PMs	= connect 4 f1tve
-#	Telnet  =
-	IPLinks = /bin/netstat --ip
-	IPRoutes= /bin/netstat -r
-	TRace   = connect f1tve-10 2080192502
-	VERsions = /usr/local/sbin/versions
-end
-
-#
-# Other SysOp commands
-#
-
-Sysop
-	DIsk = /bin/df -k
-	RM   = /bin/rm /tmp/%1
-	LS   = /bin/ls -l /tmp/%1
-	CAT  = /bin/cat /tmp/%1
-	YGET = /usr/local/sbin/yapp -u /tmp/%1
-	YPUT = /usr/local/sbin/yapp -d /tmp/%1
-	SYSop= /usr/local/sbin/fpacshell
-	WEdit	= /usr/local/sbin/wpedit %*
-end
-
-#
-# Other applications
-#
-
-Application
-	F1TVE-1 = /usr/local/sbin/call_tcp f1tve 1022
-#	F1TVE-5	= /usr/local/conversd/bin/axconv -c 151 -n %u f1tve.ampr.org 3600
-End
-
-#
-# List of routes to port
-#
-
-AddPort = vhf_1k2
-	Address = 192202
-	Port    = 1
-End
-
-#
-# List of users on specific port
-#
-
-User = F5KCK-10
-	Path = F5KCK-10
-	Port = 1
-End
-
-#
-# List of aliases
-#
-
-Alias = F1TVE-14
-	Path = F6BVP-1,175502
-End
-#
-# fpac nodes list moved to ${prefix}/etc/ax25/fpac.nodes
-#
-# fpac routes list moved to ${prefix}/etc/ax25/fpac.routes
-#
